--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -12,7 +12,7 @@
       <!-- else -->
         <a class="btn btn-success btn-lg d-inline-block" href="" role="button">Login</a>
         <p class="d-inline-block mx-2">Or</p>
-        <a class="btn btn-info btn-lg d-inline-block" href="" role="button">Register</a>
+        <a class="btn btn-info btn-lg d-inline-block" href="{% url 'accounts:register' %}" role="button">Register</a>
       <!-- endif -->
     </div>
   </div>
