--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,19 +1,29 @@
 {% extends 'common/base.html' %}
 
 {% block title %}
-    Signup
+    Register
 {% endblock %}
 
 {% block content %}
 <br>
+
 <section class="section-content padding-y" style="min-height: 84vh;">
     <div class="container d-flex justify-content-center">
         <div class="card-body">
             <form method="post" class="form-signup mx-auto" style="width: 400px;">
                 {% csrf_token %}
                 <!-- To handle errors -->
-                
-                <h2 class="form-signup-heading">Register</h2>
+                {% if form.errors %}
+                <div class="alert alert-danger">
+                    {% for field in form %}
+                    {% for error in field.errors %}
+                        <strong>{{ field.label }}:</strong> {{ error }}
+                    {% endfor %}
+                    {% endfor %}
+                </div>
+                {% endif %}
+
+                <h2 class="form-signup-heading">Create Account</h2>
                 <!-- Username -->
                 <div class="form-group">
                     <label for="id_registration_number">Username</label>
@@ -63,7 +73,7 @@
 
                 </div>
                 <!-- Submit -->
-                <button type="submit" class="btn btn btn-block btn-success">Register</button>
+                <button type="submit" class="btn btn btn-block btn-success">Create Account</button>
             </form>
             <!-- Alternative to log in -->
             <p class="text-center mt-4">Already have an account? <a href="">Log In</a></p>
