--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -28,18 +28,18 @@
     <div class="container text-center">
       <h1 class="display-4">Welcome to The KAFU Admission System</h1>
       <p class="lead">Experience a seemless transition into an exquisite university</p>
-      <!-- if user.is_authenticated  -->
-        <!-- <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a> -->
-      <!-- else -->
+      {% if user.is_authenticated %} 
+        <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a>
+      {% else %}
         <a class="btn btn-success btn-lg d-inline-block" href="" role="button">Login</a>
         <p class="d-inline-block mx-2">Or</p>
         <a class="btn btn-info btn-lg d-inline-block" href="{% url 'register' %}" role="button">Register</a>
-      <!-- endif -->
+      {% endif %}
     </div>
   </div>
 
   <!-- To view the results -->
-  <!-- if user.is_authenticated -->
+  {% if user.is_authenticated %}
   <div class="container">
     <div class="row">
       <div class="col mx-auto">
@@ -54,5 +54,5 @@
 
     </div>
   </div>
-  <!-- endif -->
+  {% endif %}
 {% endblock %}
