--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -31,7 +31,7 @@
       {% if user.is_authenticated %} 
         <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a>
       {% else %}
-        <a class="btn btn-success btn-lg d-inline-block" href="" role="button">Login</a>
+        <a class="btn btn-success btn-lg d-inline-block" href="{% url 'login' %}" role="button">Login</a>
         <p class="d-inline-block mx-2">Or</p>
         <a class="btn btn-info btn-lg d-inline-block" href="{% url 'register' %}" role="button">Register</a>
       {% endif %}
