--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -55,12 +55,12 @@
       {% else %}
         <ul class="navbar-nav d-none d-lg-flex ml-auto order-3">
           <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="{% url 'login' %}">
               Login
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="{% url 'register' %}">
               Register
             </a>
           </li>
