--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -51,7 +51,7 @@
                     <h2 class="form-signup-heading">Login</h2>
                     <!-- Registration_number -->
                     <div class="form-group">
-                        <label for="id_username">Registration Number</label>
+                        <label for="id_username">Username</label>
                         <input type="text" class="form-control" name="username" maxlength="100" placeholder="Enter your username" required="" id="id_username" value="{{ form.username.value|default:'' }}">
                     </div>
                     
