--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -40,12 +40,10 @@
                     {% csrf_token %}
                     <!-- To handle errors -->
                     {% if form.errors %}
-                    <div class="alert alert-danger">
-                        {% for field in form %}
-                        {% for error in field.errors %}
-                            <strong>{{ field.label }}:</strong> {{ error }}
-                        {% endfor %}
-                        {% endfor %}
+                    <div class="alert alert-danger"> 
+                        {% for error in form.errors %}
+                            <strong>Invalid username or password</strong><br>Please try again
+                        {% endfor %}  
                     </div>
                     {% endif %}
                     <h2 class="form-signup-heading">Login</h2>
