--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -42,7 +42,7 @@
             <ul class="navbar-nav d-none d-lg-flex ml-auto order-3">
                 <li class="nav-item">
                     <a class="nav-link" href="">
-                        Welcome, 
+                        Welcome, {{ user.username }}
                     </a>
                 </li>
                 <li class="nav-item">
