--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -23,13 +23,14 @@
           $('.alert').fadeOut('slow');
       }, 3000);
   </script>
-
+  <!-- Top jumbotron -->
   <div class="jumbotron jumbotron-fluid bg-green">
     <div class="container text-center">
       <h1 class="display-4">Welcome to The KAFU Admission System</h1>
       <p class="lead">Experience a seemless transition into an exquisite university</p>
       {% if user.is_authenticated %} 
-        <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a>
+        <!-- <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a> -->
+        <a class="btn btn-success btn-lg" href="" role="button">Start the application process</a>
       {% else %}
         <a class="btn btn-success btn-lg d-inline-block" href="{% url 'login' %}" role="button">Login</a>
         <p class="d-inline-block mx-2">Or</p>
@@ -37,8 +38,8 @@
       {% endif %}
     </div>
   </div>
-
-  <!-- To view the results -->
+<!-- End of jumbotron -->
+  <!-- To start the application -->
   {% if user.is_authenticated %}
   <div class="container">
     <div class="row">
@@ -47,7 +48,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">View your progress</h5>
             <p class="card-text">Check here</p>
-            <a href="" class="btn btn-success">View progress</a>
+            <a href="" class="btn btn-primary">View progress</a>
           </div>
         </div>
       </div>
