--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -30,7 +30,7 @@
       <p class="lead">Experience a seemless transition into an exquisite university</p>
       {% if user.is_authenticated %} 
         <!-- <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a> -->
-        <a class="btn btn-success btn-lg" href="" role="button">Start the application process</a>
+        <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">Start the application process</a>
       {% else %}
         <a class="btn btn-success btn-lg d-inline-block" href="{% url 'login' %}" role="button">Login</a>
         <p class="d-inline-block mx-2">Or</p>
