--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -26,7 +26,7 @@
                 <h2 class="form-signup-heading">Create Account</h2>
                 <!-- Username -->
                 <div class="form-group">
-                    <label for="id_registration_number">Username</label>
+                    <label for="id_registration_number" class="form-label">Username</label>
                     <input type="text" class="form-control" name="username" maxlength="100" placeholder="Enter Username" required="" id="id_username" value="{{ form.username.value|default:'' }}">
                     
                     <!-- helptext -->
