--- a/templates/admissions/personal_detail.html
+++ b/templates/admissions/personal_detail.html
@@ -7,10 +7,18 @@
         
         <!-- Name -->
             <div class="card">
-                <form action="{{ route('personal_details.store') }}" method="POST">
-                    <!-- The cross-site request forgery     -->
-                    @csrf
-                    {!! csrf_field() !!}
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <!-- To handle errors -->
+                    {% if form.errors %}
+                    <div class="alert alert-danger">
+                        {% for field in form %}
+                        {% for error in field.errors %}
+                            <strong>{{ field.label }}:</strong> {{ error }}
+                        {% endfor %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     <!-- Personal Details -->
                     <h2 class="card-header" style="margin-top: 10px;">Personal details</h2>
                     <br>
@@ -20,37 +28,20 @@
                                 <div class="row">
                                     <!-- Surname -->
                                     <div class="col">
-                                        <label for="surname" class="form-label">Surname</label>
-                                        <input type="text" class="form-control" placeholder="Surname" name="surname" value="{{ old('surname') }}">
+                                        <label for="id_surname" class="form-label">Surname</label>
+                                        <input type="text" class="form-control" placeholder="Enter Your Surname" name="surname" value="{{ form.username.value|default:'' }}">
                                     </div>
-                                    <!-- Validation -->
-                                    @error('surname')
-                                        <div class="alert alert-danger col" role="alert">
-                                            {{$message}}
-                                        </div>
-                                    @enderror
+                                    
                                     <!-- First_name -->
                                     <div class="col">
-                                        <label for="first_name" class="form-label">First Name</label>
-                                        <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{ old('first_name') }}">
+                                        <label for="id_first_name" class="form-label">First Name</label>
+                                        <input type="text" class="form-control" placeholder="Enter Your First Name" name="first_name" value="{{ form.first_name.value|default:'' }}">
                                     </div>
-                                    <!-- Validation -->
-                                    @error('first_name')
-                                        <div class="alert alert-danger col" role="alert">
-                                            {{$message}}
-                                        </div>
-                                    @enderror
                                     <!-- Last_name -->
                                     <div class="col">
-                                        <label for="last_name" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{ old('last_name') }}">
+                                        <label for="id_last_name" class="form-label">Last Name</label>
+                                        <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{ form.last_name.value|default:'' }}">
                                     </div>
-                                    <!-- Validation -->
-                                    @error('last_name')
-                                        <div class="alert alert-danger col" role="alert">
-                                            {{$message}}
-                                        </div>
-                                    @enderror
                                 </div>
                             </div>
                         <!-- DOB -->
@@ -58,15 +49,9 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <label for="dob" class="form-label">Date of Birth</label> 
-                                        <input type="date" class= "form-control" name="date" max="2007-01-01" value="{{ old('date') }}">
+                                        <label for="id_dob" class="form-label">Date of Birth</label> 
+                                        <input type="date" class= "form-control" name="date" max="2007-01-01" value="{{ form.date.value|default:'' }}">
                                     </div>
-                                    <!-- Validation -->
-                                    @error('date')
-                                        <div class="alert alert-danger col">
-                                            {{$message}}
-                                        </div>
-                                    @enderror
                                 </div>
                             </div>
                         <!-- Gender  -->
@@ -76,7 +61,7 @@
                                     <div class="col">
                                         <div class="input-group col">
                                             <div class="input-group-prepend">
-                                                <label for="gender" class="input-group-text form-label">Gender</label>
+                                                <label for="id_gender" class="input-group-text form-label">Gender</label>
                                             </div>
                                             <select class="custom-select form-control" name="gender" style="height: 38px;">
                                                 <option name= "gender" selected>Choose...</option>
@@ -85,12 +70,6 @@
                                                 <option value="Rather_Not_Say">Rather Not Say</option>
                                             </select>
                                         </div>
-                                        <!-- Validation -->
-                                        @error('gender')
-                                            <div class="alert alert-danger col" role="alert">
-                                                {{ $message }}
-                                            </div>
-                                        @enderror
                                     </div>
                                 </div>
                             </div>
@@ -100,15 +79,9 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col">
-                                        <label for="national_id" class="form-label">National ID</label>
-                                        <input type="text" class="form-control" name="national_id" pattern="[0-9]{8}" placeholder="National ID Number" value="{{ old('national_id') }}">
+                                        <label for="id_national_id" class="form-label">National ID</label>
+                                        <input type="number" class="form-control" name="national_id" pattern="[0-9]{8}" placeholder="National ID Number" value="{{ form.national_id.value|default:'' }}">
                                     </div>
-                                    <!-- Validation -->
-                                    @error('national_id')
-                                        <div class="alert alert-danger" role="alert">
-                                            {{ $message }}
-                                        </div>
-                                    @enderror
                                 </div>
                             </div>
                         <!-- Nationality -->
@@ -128,12 +101,6 @@
                                         </div>
                                         <!-- Others -->
                                     </div>
-                                    <!-- Validation -->
-                                    @error('nationality')
-                                    <div class="alert alert-danger" role="alert">
-                                        {{ $message }}
-                                    </div>
-                                    @enderror
                                 </div>
                             </div> 
                             <!-- Religion      -->
@@ -153,12 +120,6 @@
                                         </div>
                                         <!-- Others -->
                                     </div>
-                                        <!-- Validation -->
-                                    @error('religion')
-                                        <div class="alert alert-danger" role="alert">
-                                            {{ $message }}
-                                        </div>
-                                    @enderror
                                 </div>
                             </div> 
                     <br>
@@ -171,28 +132,16 @@
                                 <div class="row">
                                     <!-- Email -->
                                     <div class="col">
-                                        <label for="email" class="form-label">Email</label>
-                                        <input type="email" class="form-control" placeholder="Enter your email" name="email" value="{{ old('email') }}">
-                                        <!-- Validation -->
-                                        @error('email')
-                                            <div class="alert alert-danger" role="alert">
-                                                {{ $message }}
-                                            </div>
-                                        @enderror
+                                        <label for="id_email" class="form-label">Email</label>
+                                        <input type="email" class="form-control" placeholder="Enter your email" name="email" value="{{ form.email.value|default:'' }}">
                                     </div>
                                     <!-- Phone -->
                                     <div class="col">
-                                        <label for="phone" class="form-label">Phone Number</label>
+                                        <label for="id_phone" class="form-label">Phone Number</label>
                                         <div class="input-group">
                                             <span class="input-group-text">+254</span>
-                                            <input type="tel" class="form-control" placeholder="7000000**" name="phone" pattern="[0-9]{9}" value="{{ old('phone') }}">
+                                            <input type="tel" class="form-control" placeholder="7000000**" name="phone" pattern="[0-9]{9}" value="{{ form.phone.value|default:'' }}">
                                         </div>
-                                        <!-- Validation -->
-                                        @error('phone')
-                                            <div class="alert alert-danger" role="alert">
-                                                {{ $message }}
-                                            </div>
-                                        @enderror
                                     </div>
                                 </div>
                             </div>
@@ -202,25 +151,13 @@
                                 <div class="row">
                                     <!-- City/Town -->
                                     <div class="col">
-                                        <label for="city" class="form-label">City/Town</label>
-                                        <input type="text" class="form-control" placeholder="Which is your closest city/town" name="city" value="{{ old('city') }}">
-                                        <!-- Validation -->
-                                        @error('city')
-                                            <div class="alert alert-danger" role="alert">
-                                                {{ $message }}
-                                            </div>
-                                        @enderror
+                                        <label for="id_city" class="form-label">City/Town</label>
+                                        <input type="text" class="form-control" placeholder="Which is your closest city/town" name="city" value="{{ form.city.value|default:'' }}">
                                     </div>
                                     <!-- P.O BOX -->
                                     <div class="col">
-                                        <label for="pob" class="form-label">P.O BOX</label>
-                                        <input type="text" class="form-control" placeholder="Enter your P.O BOX" name="pob" value="{{ old('pob') }}">
-                                        <!-- Validation -->
-                                        @error('pob')
-                                            <div class="alert alert-danger" role="alert">
-                                                {{ $message }}
-                                            </div>
-                                        @enderror
+                                        <label for="id_pob" class="form-label">P.O BOX</label>
+                                        <input type="text" class="form-control" placeholder="Enter your P.O BOX" name="pob" value="{{ form.pob.value|default:'' }}">
                                     </div>
                                 </div>
                             </div>
@@ -236,7 +173,7 @@
             </div>
     </div>
 </div>      
-<br> 
+<br>
 
 
 {% endblock %}
