--- a/templates/admissions/parent_detail.html
+++ b/templates/admissions/parent_detail.html
@@ -3,7 +3,27 @@
 {% extends 'common/base.html' %}
 {% block title %}Parent Details{% endblock %}
 {% block content %}
-<!-- The header -->
+  <!-- To display the messages -->
+  <!-- The messages -->
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {% endfor %}
+  {% endif %}
+
+
+  <!-- To let the message disappear after a few seconds -->
+  <script>
+      setTimeout(function() {
+          $('.alert').fadeOut('slow');
+      }, 3000);
+  </script>
+
     <!-- The body -->
     <div class="container" style="margin-top: 50px;"> 
         <!-- Parent details -->
