--- a/templates/admissions/spouse_detail.html
+++ b/templates/admissions/spouse_detail.html
@@ -15,6 +15,14 @@
       </div>
     {% endfor %}
   {% endif %}
+
+
+  <!-- To let the message disappear after a few seconds -->
+  <script>
+      setTimeout(function() {
+          $('.alert').fadeOut('slow');
+      }, 3000);
+  </script>
     <!-- The body -->
     <div class="container" style="margin-top: 50px;">
 
