--- a/templates/admissions/nxtk_detail.html
+++ b/templates/admissions/nxtk_detail.html
@@ -67,7 +67,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <label for="id_nxtk_national_id" class="form-label">National ID</label>
-                                                <input type="text" class="form-control" name="nxtk_national_id" pattern="[0-9]{8}" placeholder="National ID Number" value="{{ form.nxtk_national_id.value|default:'' }}">
+                                                <input type="number" class="form-control" name="nxtk_national_id" pattern="[0-9]{8}" placeholder="National ID Number" value="{{ form.nxtk_national_id.value|default:'' }}">
                                             </div> 
                                         </div>
                                     </div>
