--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -30,10 +30,12 @@
       <p class="lead">Experience a seemless transition into an exquisite university</p>
       {% if user.is_authenticated %}
         {% if request.user.personaldetail_set.exists %}
-          <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">Continue with the application process</a>
+          {% if request.user.filedetail_set.exists %}
+            <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">You have finished the application process</a> 
+          {% else %}
+            <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">Continue with the application process</a>
         <!-- <a class="btn btn-primary btn-lg" href="" role="button">View your progress</a> -->
-        {% elif request.user.personaldetail_set.exists and request.user.filedetail_set.exists %}
-          <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">You have finished View the application process</a> 
+          {% endif %}
         {% else %}
           <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">Start the application process</a>
         {% endif %}
@@ -52,9 +54,9 @@
       <div class="col mx-auto">
         <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title">View your progress</h5>
+            <h5 class="card-title">To view your details</h5>
             <p class="card-text">Check here</p>
-            <a href="" class="btn btn-primary">View progress</a>
+            <a href="" class="btn btn-primary">View your details</a>
           </div>
         </div>
       </div>
