--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -56,7 +56,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">To view your details</h5>
             <p class="card-text">Check here</p>
-            <a href="" class="btn btn-primary">View your details</a>
+            <a href="{% url 'submissions:view_details' %}" class="btn btn-primary">View your details</a>
           </div>
         </div>
       </div>
