student can now view and edit a form, personal detail form

--- a/templates/submissions/view_details.html
+++ b/templates/submissions/view_details.html
@@ -7,11 +7,11 @@
       <div class="col mx-auto">
         <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title">Select the form You wish to view</h5>
+            <h5 class="card-title">Select the form you wish to view or edit</h5>
             <p class="card-text">Click below</p>
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Select a Form
+                  Select a form
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" href="{% url 'submissions:view_personal_details' user_id=user.id %}">Personal Details</a>
