--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -54,9 +54,9 @@
       <div class="col mx-auto">
         <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title">To view your details</h5>
+            <h5 class="card-title">To view or edit your details</h5>
             <p class="card-text">Check here</p>
-            <a href="{% url 'submissions:view_details' %}" class="btn btn-primary">View your details</a>
+            <a href="{% url 'submissions:view_details' %}" class="btn btn-primary">View or edit your details</a>
           </div>
         </div>
       </div>
