adding  help text

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -38,6 +38,7 @@
           {% endif %}
         {% else %}
           <a class="btn btn-success btn-lg" href="{%  url 'admissions:personal_details' %}" role="button">Start the application process</a>
+          <h5 class="card-title">Not to worry, you can always edit the forms after finishing the submission process</h5>
         {% endif %}
 
       {% else %}
