--- a/templates/submissions/view_personal_details.html
+++ b/templates/submissions/view_personal_details.html
@@ -1,6 +1,26 @@
 {% extends 'common/base.html' %}
 {% block title %} Personal Details {% endblock %}
 {% block content %}
+  <!-- To display the messages -->
+  <!-- The messages -->
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {% endfor %}
+  {% endif %}
+
+
+  <!-- To let the message disappear after a few seconds -->
+  <script>
+      setTimeout(function() {
+          $('.alert').fadeOut('slow');
+      }, 3000);
+  </script>
 <!-- Personal details -->
 <div class="row">
     <div class="col-md-12">
