--- a/templates/submissions/view_details.html
+++ b/templates/submissions/view_details.html
@@ -17,6 +17,12 @@
                   <a class="dropdown-item" href="{% url 'submissions:view_personal_details' user_id=user.id %}">Personal Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_parent_details' user_id=user.id %}">Parent Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Spouse Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_next_kin_details' user_id=user.id %}">Next of Kin Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Games and Sports Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Clubs and Societies Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Other Institution Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Other Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">File Details</a>
                   <!-- Add more links for other forms here -->
                 </div>
               </div>
