games and sports view

--- a/templates/submissions/view_details.html
+++ b/templates/submissions/view_details.html
@@ -20,7 +20,7 @@
                   <a class="dropdown-item" href="{% url 'submissions:view_next_kin_details' user_id=user.id %}">Next of Kin Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_emergency_contact_details' user_id=user.id %}">Emergency Contact Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_high_school_details' user_id=user.id %}">High School Details</a>
-                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Games and Sports Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_games_details' user_id=user.id %}">Games and Sports Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Clubs and Societies Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Other Institution Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">Other Details</a>
