--- a/templates/submissions/view_details.html
+++ b/templates/submissions/view_details.html
@@ -24,7 +24,7 @@
                   <a class="dropdown-item" href="{% url 'submissions:view_clubs_details' user_id=user.id %}">Clubs and Societies Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_other_institution_details' user_id=user.id %}">Other Institution Details</a>
                   <a class="dropdown-item" href="{% url 'submissions:view_other_details' user_id=user.id %}">Other Details</a>
-                  <a class="dropdown-item" href="{% url 'submissions:view_spouse_details' user_id=user.id %}">File Details</a>
+                  <a class="dropdown-item" href="{% url 'submissions:view_file_details' user_id=user.id %}">File Details</a>
                   <!-- Add more links for other forms here -->
                 </div>
               </div>
