--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'custom_css/styles.css' %}">
-    
+    <!-- Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
