--- a/templates/submissions/view_details.html
+++ b/templates/submissions/view_details.html
@@ -7,7 +7,7 @@
       <div class="col mx-auto">
         <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title">Select the form you wish to view or edit</h5>
+            <h5 class="card-title">Select the form you wish to view, edit, and download</h5>
             <p class="card-text">Click below</p>
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
