--- a/templates/submissions/view_next_kin_details.html
+++ b/templates/submissions/view_next_kin_details.html
@@ -43,7 +43,13 @@
                         </div>
                         {% endif %}
                         <!-- Parent Details -->
-                        <h2 class="card-header" style="margin-top: 10px;">Next of Kin Details</h2>
+                        <div class="card-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+                            <h2 style="margin: 0;">Next of Kin details</h2>
+                            <a class="btn btn-success" href="{% url 'forms_downloads:download_next_kin_details' user_id=user.id %}" style="margin-left: 10px;">
+                                Download Form 
+                                 <i class="fa fa-save" style="font-size:24px;"></i>
+                            </a>
+                        </div>
                         <br>
                             <!-- Next of Kin -->
                             <h4 class="card-header">Next of Kin</h4>
