emergency contact details

--- a/templates/submissions/view_emergency_contact_details.html
+++ b/templates/submissions/view_emergency_contact_details.html
@@ -42,7 +42,13 @@
                         </div>
                         {% endif %}
                         <!-- Parent Details -->
-                        <h2 class="card-header" style="margin-top: 10px;">Emergency Contact Details</h2>
+                        <div class="card-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+                            <h2 style="margin: 0;">Emergency Contact details</h2>
+                            <a class="btn btn-success" href="{% url 'forms_downloads:download_emergency_contact_details' user_id=user.id %}" style="margin-left: 10px;">
+                                Download Form 
+                                 <i class="fa fa-save" style="font-size:24px;"></i>
+                            </a>
+                        </div>
                         <br>
                             <!-- Next of Kin -->
                             <h4 class="card-header">Emergency Contact Details</h4>
