--- a/templates/submissions/view_other_institution_details.html
+++ b/templates/submissions/view_other_institution_details.html
@@ -46,7 +46,13 @@
                             {% endfor %}
                         </div>
                         {% endif %}
-                        <h2 class="card-header" style="margin-top: 10px;">Other Institution/Qualification Details</h2>
+                        <div class="card-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+                            <h2 style="margin: 0;">Other Institution details</h2>
+                            <a class="btn btn-success" href="{% url 'forms_downloads:download_other_institution_details' user_id=user.id %}" style="margin-left: 10px;">
+                                Download Form 
+                                 <i class="fa fa-save" style="font-size:24px;"></i>
+                            </a>
+                        </div>
                             <div class="card-body">
                                 <!-- The table for the different high schools attended -->
                                 <table class="table table-striped table-bordered table-hover">
