file details download

--- a/templates/submissions/view_file_details.html
+++ b/templates/submissions/view_file_details.html
@@ -45,7 +45,13 @@
                     <form action="" method="POST" enctype="multipart/form-data">
                          <!-- The cross-site request forgery     -->
                             {% csrf_token %}
-                        <h2 class="card-header" style="margin-top: 10px;">File Uploads Details</h2>
+                            <div class="card-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+                                <h2 style="margin: 0;">File details</h2>
+                                <a class="btn btn-success" href="{% url 'forms_downloads:download_file_details' user_id=user.id %}" style="margin-left: 10px;">
+                                    Download Form 
+                                     <i class="fa fa-save" style="font-size:24px;"></i>
+                                </a>
+                            </div>
                         <br>
                             <div class="card-header">Please upload your files in the following fields, respectively</div>
                                 <div class="card-body">
