all systems are a go!!!

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -1,6 +1,6 @@
 {% extends 'common/base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}KAFU Online Admission System{% endblock %}
 
 {% block content %}
   <!-- To display the messages -->
