--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,6 +1,9 @@
+<!-- footer.html -->
 {% load static %}
-<footer>
-    <article>
-        <p>Copyright Denzel Gitonga</p>
-    </article>
+<footer class="footer mt-auto bg-light py-4">
+    <div class="container text-center">
+        <!-- Add your footer content here -->
+        <p>&copy; {% now "Y" %} Kafu Online Admission System. All rights reserved.</p>
+        <p>Designed and built with <i class="fa fa-heart text-danger"></i> by Denzel.</p>
+    </div>
 </footer>
