--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -23,6 +23,10 @@
     <!-- Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+     <!-- Favicon -->
+     <link rel="icon" type="image/x-icon" href="{% static 'images/logos/Kafu_favicon.ico' %}">
+
+
 </head>
 <body>
     <!-- The header, includes the header.html -->
